--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ allprojects {
 subprojects {
 
     apply plugin: 'biz.aQute.bnd.builder'
+	apply plugin: 'signing'
 	apply plugin: 'maven'
 	apply plugin: 'maven-publish'
 	
@@ -136,81 +137,63 @@ subprojects {
 		version project.version
 	}
 	
-	// MavenPublishing (new), incomplete, works only for local.
+	// MavenPublishing (new)
 	
 	publishing {
 		
-		publications {
-			mavenJava(MavenPublication) {
-				artifactId = archivesBaseName
-				from components.java
-				artifact sourcesJar
-				artifact javadocJar
-			}
-		}
-	}
-
-	// MavenPublishing (original), still needed for remote 
-
-	uploadArchives {
 		repositories {
-			mavenDeployer {
-				beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
- 
-				pom.project {
-			
-					name project.name
-					artifactId project.archivesBaseName
-					packaging 'pom'
-					description project.description
-					url 'http://mnlipp.github.io/jgrapes/'
- 
-					scm {
-						url 'scm:git@github.com:mnlipp/jgrapes.git'
-						connection 'scm:git@github.com:mnlipp/jgrapes.git'
-						developerConnection 'git@github.com:mnlipp/jgrapes.git'
-					}
- 
-					licenses {
-						license {
-							name 'GPL 3.0'
-							url 'https://www.gnu.org/licenses/gpl-3.0.en.html'
-							distribution 'repo'
-						}
-					}
- 
-					developers {
-						developer {
-							id 'mnlipp'
-							name 'Michael N. Lipp'
-						}
-					}
+			maven {
+				name "snapshot"
+				url "https://oss.sonatype.org/content/repositories/snapshots/"
+				credentials {
+					username project.properties['sonatypeUsername'] ?: "nouser"
+					password project.properties['sonatypePassword'] ?: "nopass"
 				}
-			
-				artifacts {
-					archives jar
-					archives sourcesJar
-					archives javadocJar
-				}
-
-				repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-					authentication(userName: project.properties['sonatypeUsername'] ?: "nouser", 
-						password: project.properties['sonatypePassword'] ?: "nopass")
-				}
-				snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
-					authentication(userName: project.properties['sonatypeUsername'] ?: "nouser", 
-						password: project.properties['sonatypePassword'] ?: "nopass")
+			}
+			maven {
+				name "release"
+				url "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
+				credentials {
+					username project.properties['sonatypeUsername'] ?: "nouser"
+					password project.properties['sonatypePassword'] ?: "nopass"
 				}
 			}
 		}
 	}
-	
+
+	// Additional configuration of publishing
+	apply plugin: ConfigurePublishing
+
+	configurePublishing {
+		withPomXml {
+			asNode().with {
+				appendNode('url', 'http://mnlipp.github.io/jgrapes/')
+				appendNode('scm').with {
+					appendNode('url', 'scm:git@github.com:mnlipp/jgrapes-portal-themes.git')
+					appendNode('connection', 'scm:git@github.com:mnlipp/jgrapes-portal-themes.git')
+					appendNode('developerConnection', 'git@github.com:mnlipp/jgrapes-portal-themes.git')
+				}
+				appendNode('licenses').with {
+					appendNode('license').with {
+						appendNode('name', 'GPL 3.0')
+						appendNode('url', 'https://www.gnu.org/licenses/gpl-3.0.en.html')
+						appendNode('distribution', 'repo')
+					}
+				}
+				appendNode('developers').with {
+					appendNode('developer').with {
+						appendNode('id', 'mnlipp')
+						appendNode('name', 'Michael N. Lipp')
+					}
+				}
+			}
+		}
+	}
+
 	afterEvaluate {
-		println "Checking " + project.name
 		if(!project.name.startsWith("org.jgrapes")) {
 			tasks.matching { it.group == "upload" ||
 				it.group == "publishing" }.all {
-				// println "Disabling " + project.name + ":" + it.name 
 				enabled = false
 			}
 		}
