--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -1,3 +1,8 @@
+dependencies {
+	compile gradleApi()
+	compile localGroovy()
+}
+
 // Configure sensible layout
 sourceSets {
 	main {
@@ -18,3 +23,14 @@ sourceSets {
 		}
 	}
 }
+
+apply plugin: 'eclipse'
+
+eclipse {
+    project {
+        buildCommand 'bndtools.core.bndbuilder'
+        natures 'org.eclipse.jdt.groovy.core.groovyNature'
+    }
+}
+tasks.eclipse.dependsOn(cleanEclipse)
+
