--- a/build.gradle
+++ b/build.gradle
@@ -53,7 +53,7 @@ allprojects {
 	group = 'org.jgrapes'
 	
 	ext.releaseVersion = "0.19.0"
-	ext.isSnapshot = true
+	ext.isSnapshot = false
 	version = releaseVersion + (isSnapshot ? "-SNAPSHOT" : "")
 }
 
