--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,7 @@ allprojects {
 subprojects {
     // Defaults, can be overridden in subproject's build.gradle
     ext.releaseVersion = "0.19.1"
-    ext.isSnapshot = true
+    ext.isSnapshot = false
 	version = releaseVersion + (isSnapshot ? "-SNAPSHOT" : "")
 	
 	apply from: "${project.rootDir}/gradle/subprojects.gradle"
